--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,2 +1,9 @@
 [buildout]
-parts =
+parts = python
+develop = .
+eggs = helloworld
+
+[python]
+recipe = zc.recipe.egg
+interpreter = python
+eggs = ${buildout:eggs}
